[gd_scene load_steps=5 format=3 uid="uid://2bpygb7s54r2"]

[ext_resource type="Script" path="res://scripts/item_creation.gd" id="1_kxsvu"]
[ext_resource type="Texture2D" uid="uid://oti8uykmvghf" path="res://icons/TextureRect.svg" id="2_hm3qt"]
[ext_resource type="Texture2D" uid="uid://dyfabdpg87qmi" path="res://icons/Add.svg" id="3_a1bu1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bna07"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="ItemCreation" type="Window"]
title = "Item Creation"
initial_position = 2
size = Vector2i(500, 500)
script = ExtResource("1_kxsvu")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_bna07")

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Category" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Category"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Category/HBoxContainer"]
layout_mode = 2
text = "Category:"

[node name="CategoryTextEdit" type="TextEdit" parent="ScrollContainer/VBoxContainer/Category/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
scroll_fit_content_height = true

[node name="Name" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Name"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Name/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="NameTextEdit" type="TextEdit" parent="ScrollContainer/VBoxContainer/Name/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
scroll_fit_content_height = true

[node name="Weight" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Weight"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Weight/HBoxContainer"]
layout_mode = 2
text = "Weight:"

[node name="WeightSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/Weight/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Count" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Count"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Count/HBoxContainer"]
layout_mode = 2
text = "Count:"

[node name="CountSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/Count/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
step = 0.0
allow_greater = true
allow_lesser = true

[node name="Description" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Description"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Description/HBoxContainer"]
layout_mode = 2
text = "Description:"

[node name="DescriptionTextEdit" type="TextEdit" parent="ScrollContainer/VBoxContainer/Description/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
scroll_fit_content_height = true

[node name="Icon" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Icon"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Icon/HBoxContainer"]
layout_mode = 2
text = "Icon:"

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer/Icon/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_hm3qt")
ignore_texture_size = true
stretch_mode = 4

[node name="Attributes" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/Attributes"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/Attributes/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Attributes/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attrubutes:"

[node name="AttributeAddButton" type="Button" parent="ScrollContainer/VBoxContainer/Attributes/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_a1bu1")

[node name="AttributeModifiers" type="PanelContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/AttributeModifiers"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AttributeModifiers/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/AttributeModifiers/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Attrubute Modifiers:"

[node name="AttributeModAddButton" type="Button" parent="ScrollContainer/VBoxContainer/AttributeModifiers/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("3_a1bu1")

[node name="ImageFileDialog" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(400, 400)
always_on_top = true
ok_button_text = "Open"
file_mode = 0
show_hidden_files = true

[connection signal="text_changed" from="ScrollContainer/VBoxContainer/Category/HBoxContainer/CategoryTextEdit" to="." method="_on_category_text_edit_text_changed"]
[connection signal="text_changed" from="ScrollContainer/VBoxContainer/Name/HBoxContainer/NameTextEdit" to="." method="_on_name_text_edit_text_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Weight/HBoxContainer/WeightSpinBox" to="." method="_on_weight_spin_box_value_changed"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/Count/HBoxContainer/CountSpinBox" to="." method="_on_count_spin_box_value_changed"]
[connection signal="text_changed" from="ScrollContainer/VBoxContainer/Description/HBoxContainer/DescriptionTextEdit" to="." method="_on_description_text_edit_text_changed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Icon/HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Attributes/VBoxContainer/HBoxContainer/AttributeAddButton" to="." method="_on_attribute_add_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AttributeModifiers/VBoxContainer/HBoxContainer/AttributeModAddButton" to="." method="_on_attribute_mod_add_button_pressed"]
[connection signal="file_selected" from="ImageFileDialog" to="." method="_on_image_file_dialog_file_selected"]
